# LFSD

./: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_PROMPT_GUARDRAILS.md  APPLICATION_ARCHITECTURE.md  BOUNDARIES.md  DATABASE_SCHEMA.md  Dockerfile  IMPLEMENTATION_PLAN.md  OPERATIONALIZATION_PLAN.md  README.md  RUNBOOK.md  SECURITY.md  SYSTEM.md  TEST_PLAN.md  TRIGGER_BUILD.txt  activity_feed_routes.py  all_services.txt  app.py  audit_routes.py  authentication.py  backend_config.json  backend_export.yaml  breakdown_result.json  chat_error_logs.json  chat_routes.py  check_db_state.ps1  check_db_state.py  check_duplicates.py  check_schema.py  check_scores_response.ps1  check_seeded_data.py  check_syntax.py  check_time_data.ps1  check_user_data.py  check_users.py  (+69 more)
.github/: dependabot.yml
GOVERNANCE/: AI_PROMPT_GUARDRAILS.md  FINAL_MISSION_REPORT.md  GCP_KILL_LIST.md  GOVERNANCE.md  SYSTEM.md
alembic/: env.py
api_gateway/: app.py  config.py
backend/: .env.example  .env.template  .gitignore  ACTION_PLAN_WEEK1.md  ALEMBIC_MIGRATION_GUIDE.md  API_KEY_ROTATION_FINAL_STEPS.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMPLETE_EXECUTION_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPRECATION_AUDIT_LOG_SERVICE.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  FINAL_MISSION_REPORT.md  INLINE_SEED_TEMPLATE.py  MASTER_CLEANUP_SUMMARY.md  MODELS_AUDIT.md  MODELS_FIX_SUMMARY.md  MODELS_MIGRATION_PLAN.md  PHASE_2_REPORT.md  Procfile  README.md  ROUTES_AUDIT.md  SCHEMA.md  SCRIPTS_CLEANUP_PLAN.md  (+86 more)
(+705 files in other folders)
