[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "backend",
    ".",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]